--- a/content/events-actus/posts/20240427-nouvel-an.md
+++ b/content/events-actus/posts/20240427-nouvel-an.md
@@ -2,6 +2,7 @@
 title: Samedi 27 avril 2024 - Nouvel An khmer à LOGNES au Kiosque citoyen
 description: "Pour soutenir le projet Fragments #KH50,  Fragmentis Vitae Asia et Banh Mi Média vous donnent rendez-vous, samedi 27 avril de 12h30 à 19h30 à Lognes"
 date: 2024-04-27
+image: /images/khco.jpg
 
 ---
 
