--- a/content/events-actus/posts/20250208-pilotis.md
+++ b/content/events-actus/posts/20250208-pilotis.md
@@ -10,12 +10,15 @@ Un moment solennel et symbolique a marqué, samedi 8 février, une étape essent
 
 ![image d'illustration](/images/events/pilotis-1.jpg)
 
+## Des fondations profondes, un hommage vivant
+Au Cambodge, les maisons traditionnelles reposent sur des pilotis, symboles de stabilité et de résilience face aux tumultes de l'Histoire.<br>
+C'est dans cet esprit que la pose des 7 pilotis du Mémorial KH50 a eu lieu, en présence de personnalités et d'amis engagés dans le devoir de mémoire. Parmi eux : Son Excellence David Luy, ambassadeur du Cambodge en France, l'ambassadrice du Cambodge auprès de l'UNESCO Bophana Un, Son Altesse le prince Preyaro Norodom, le sénateur Vincent Eblé, président du Groupe d'amitié France-Cambodge et Laos au Sénat, ainsi que le maire de Lognes, Nicolas Delaunay.<br>
+Sun-Lay Tan, président de l’association Fragmentis Vitae Asia, a rappelé avec force la portée de cet instant : « Chaque coup de maillet est une manière d’enraciner les histoires des familles originaires du Cambodge dans la mémoire nationale. »<br>
 
-🗞 Mercredi 30 octobre 2024 - Le Mémorial Fragments KH50 a fait la une du Parisien, édition Seine-et-Marne.<br><br>
-L’article est désormais à retrouver sur le site internet du parisien : [Lien vers l'article](https://www.leparisien.fr/seine-et-marne-77/lognes-premiere-ville-asiatique-de-france-accueillera-le-memorial-des-victimes-des-khmers-rouges-30-10-2024-CMLFF5RVT5CS3I7RLVOY6TPEVE.php)<br>
-Il est également à retrouver dans l’espace presse du site internet : [https://www.fragmentis-vitae.org/espace-presse/](https://www.fragmentis-vitae.org/espace-presse/)<br><br>
-L’association Fragmentis Vitae Asia remercie Le Parisien pour l’article ainsi que la ville de Lognes pour son soutien.
-L’association est fière de compter parmi elle des soutiens d’exception : contributeurs, donateurs, partenaires. L’aventure continue grâce à vous tous ! Faites passer le mot 😊
+## Une bénédiction pour honorer les esprits
+L'après-midi a été marquée par une cérémonie de purification et de bénédiction, en présence des vénérables des pagodes de Champs-sur-Marne, Tremblay-en-France et Bordeaux, qui se réunissent à de rares occasions. Une manière de rendre hommage aux disparus et de transmettre un message de paix et de transmission.
 
-![image d'illustration](/images/events/parisien-2024.PNG)
+![image d'illustration](/images/events/pilotis-2.jpg)
+L’inauguration officielle du Mémorial KH50 aura lieu le 17 avril à Lognes (Seine-et-Marne), lors des commémorations du cinquantenaire de la prise de Phnom Penh.
+
  
