--- a/content/events-actus/posts/20250208-pilotis.md
+++ b/content/events-actus/posts/20250208-pilotis.md
@@ -5,7 +5,7 @@ date: 2025-02-08
 image: /images/events/pilotis-1.jpg
 ---
 
-# Mémorial KH50 : une pose des 7 pilotis chargée d'histoire et d'émotion
+## Mémorial KH50 : une pose des 7 pilotis chargée d'histoire et d'émotion
 Un moment solennel et symbolique a marqué, samedi 8 février, une étape essentielle du projet Mémorial KH50 : la cérémonie de la « pose des 7 pilotis ». Plus qu'un simple acte de construction, cet événement a incarné l'enracinement de l’histoire des familles originaires du Cambodge dans la mémoire nationale.
 
 ![image d'illustration](/images/events/pilotis-1.jpg)
