--- a/content/events-actus/posts/20250211-CETC.md
+++ b/content/events-actus/posts/20250211-CETC.md
@@ -2,14 +2,14 @@
 title: "[Actu] Mardi 11 février 2025 - Rencontres avec les CETC et Maître Chet Vanly"
 description: "Retour sur les rencontres avec les chambres extraordinaires au sein des tribunaux cambodgiens"
 date: 2025-02-11
-image: /images/events/CETC-1.jpg
+image: /images/events/CETC-1.PNG
 ---
 ## Un partenariat historique avec les Chambres extraordinaires des tribunaux cambodgiens (CETC)
-![image d'illustration](/images/events/CETC-1.jpg)
+![image d'illustration](/images/events/CETC-1.PNG)
 
 L’association Fragmentis Vitae Asia a signé un **Memorandum of Understanding (MoU)** avec les CETC, un organisme clé dans la justice post-Khmers rouges. Cet accord, signé à Phnom Penh, mercredi 22 janvier, par **S. E. Tony Kranh**, directeur par intérim du Bureau de l’administration des CETC, et **Frédéric Dabi**, vice-président de l’association, vise à favoriser la diffusion des connaissances historiques et à faciliter l’accès aux archives.
 
-🔎 Lire l’article en anglais : Khmer Times [Khmer Times](https://www.khmertimeskh.com/501630314/eccc-fragmentis-vitae-asia-sign-mou-on-legacy-preservation/)
+🔎 Lire l’article en anglais : [Khmer Times](https://www.khmertimeskh.com/501630314/eccc-fragmentis-vitae-asia-sign-mou-on-legacy-preservation/)
 
 🗞 Mercredi 30 octobre 2024 - Le Mémorial Fragments KH50 a fait la une du Parisien, édition Seine-et-Marne.<br><br>
 L’article est désormais à retrouver sur le site internet du parisien : [Lien vers l'article](https://www.leparisien.fr/seine-et-marne-77/lognes-premiere-ville-asiatique-de-france-accueillera-le-memorial-des-victimes-des-khmers-rouges-30-10-2024-CMLFF5RVT5CS3I7RLVOY6TPEVE.php)<br>
