--- a/content/events-actus/posts/20250211-CETC.md
+++ b/content/events-actus/posts/20250211-CETC.md
@@ -10,11 +10,14 @@ image: /images/events/CETC-1.PNG
 L’association Fragmentis Vitae Asia a signé un **Memorandum of Understanding (MoU)** avec les CETC, un organisme clé dans la justice post-Khmers rouges. Cet accord, signé à Phnom Penh, mercredi 22 janvier, par **S. E. Tony Kranh**, directeur par intérim du Bureau de l’administration des CETC, et **Frédéric Dabi**, vice-président de l’association, vise à favoriser la diffusion des connaissances historiques et à faciliter l’accès aux archives.
 
 🔎 Lire l’article en anglais : [Khmer Times](https://www.khmertimeskh.com/501630314/eccc-fragmentis-vitae-asia-sign-mou-on-legacy-preservation/)
+<br>
+![image d'illustration](/images/events/CETC-2.PNG)
+Dans le cadre de cet accord, Maître Chet Vanly, avocate des parties civiles dans les procès des plus hauts responsables du Kampuchéa Démocratique, a rencontré les membres de notre association le mardi 11 février pour un échange profond sur les enjeux de justice et de mémoire. Son témoignage, empreint de gravité et d’espoir, a résonné avec force auprès de ceux qui œuvrent à préserver la mémoire des victimes.<br><br>
 
-🗞 Mercredi 30 octobre 2024 - Le Mémorial Fragments KH50 a fait la une du Parisien, édition Seine-et-Marne.<br><br>
-L’article est désormais à retrouver sur le site internet du parisien : [Lien vers l'article](https://www.leparisien.fr/seine-et-marne-77/lognes-premiere-ville-asiatique-de-france-accueillera-le-memorial-des-victimes-des-khmers-rouges-30-10-2024-CMLFF5RVT5CS3I7RLVOY6TPEVE.php)<br>
-Il est également à retrouver dans l’espace presse du site internet : [https://www.fragmentis-vitae.org/espace-presse/](https://www.fragmentis-vitae.org/espace-presse/)<br><br>
-L’association Fragmentis Vitae Asia remercie Le Parisien pour l’article ainsi que la ville de Lognes pour son soutien.
-L’association est fière de compter parmi elle des soutiens d’exception : contributeurs, donateurs, partenaires. L’aventure continue grâce à vous tous ! Faites passer le mot 😊
+La veille, aux côtés du président, Sun-Lay TAN, et des membres du Conseil d’administration de l’Association, Maître Chet Vanly – elle-même rescapée du régime de Pol Pot – a foulé le sol du Mémorial KH50. En découvrant ce lieu de recueillement et de transmission, elle a salué avec émotion le travail des membres de l’initiative mémorielle, soulignant l'importance de cet engagement pour les générations futures.<br>
 
-![image d'illustration](/images/events/parisien-2024.PNG)
+![image d'illustration](/images/events/CETC-3.PNG)
+
+Dans un moment empreint de solennité et d’humanité, elle a ensuite rencontré les élèves de 4e et 3e du collège Louis-Aragon à Torcy (77). Face à ce jeune public, elle a partagé l’histoire douloureuse du Cambodge, mettant des visages et des récits derrière les chiffres du génocide. Son témoignage, porteur d’une mémoire vive et d’un appel à la vigilance, a semé les graines d’une conscience nouvelle chez ces élèves, les invitant à devenir, à leur tour, des passeurs de mémoire.
+
+![image d'illustration](/images/events/CETC-4.PNG)
