--- a/content/events-actus/posts/20250211-CETC.md
+++ b/content/events-actus/posts/20250211-CETC.md
@@ -11,7 +11,7 @@ L’association Fragmentis Vitae Asia a signé un **Memorandum of Understanding 
 
 🔎 Lire l’article en anglais : [Khmer Times](https://www.khmertimeskh.com/501630314/eccc-fragmentis-vitae-asia-sign-mou-on-legacy-preservation/)
 <br>
-![image d'illustration](/images/events/CETC-2.PNG)
+![image d'illustration](/images/events/CETC-2.PNG) <br>
 Dans le cadre de cet accord, Maître Chet Vanly, avocate des parties civiles dans les procès des plus hauts responsables du Kampuchéa Démocratique, a rencontré les membres de notre association le mardi 11 février pour un échange profond sur les enjeux de justice et de mémoire. Son témoignage, empreint de gravité et d’espoir, a résonné avec force auprès de ceux qui œuvrent à préserver la mémoire des victimes.<br><br>
 
 La veille, aux côtés du président, Sun-Lay TAN, et des membres du Conseil d’administration de l’Association, Maître Chet Vanly – elle-même rescapée du régime de Pol Pot – a foulé le sol du Mémorial KH50. En découvrant ce lieu de recueillement et de transmission, elle a salué avec émotion le travail des membres de l’initiative mémorielle, soulignant l'importance de cet engagement pour les générations futures.<br>
