--- a/content/events-actus/posts/20250208-pilotis.md
+++ b/content/events-actus/posts/20250208-pilotis.md
@@ -13,7 +13,7 @@ Un moment solennel et symbolique a marqué, samedi 8 février, une étape essent
 ## Des fondations profondes, un hommage vivant
 Au Cambodge, les maisons traditionnelles reposent sur des pilotis, symboles de stabilité et de résilience face aux tumultes de l'Histoire.<br>
 C'est dans cet esprit que la pose des 7 pilotis du Mémorial KH50 a eu lieu, en présence de personnalités et d'amis engagés dans le devoir de mémoire. Parmi eux : Son Excellence David Luy, ambassadeur du Cambodge en France, l'ambassadrice du Cambodge auprès de l'UNESCO Bophana Un, Son Altesse le prince Preyaro Norodom, le sénateur Vincent Eblé, président du Groupe d'amitié France-Cambodge et Laos au Sénat, ainsi que le maire de Lognes, Nicolas Delaunay.<br>
-Sun-Lay Tan, président de l’association Fragmentis Vitae Asia, a rappelé avec force la portée de cet instant : « Chaque coup de maillet est une manière d’enraciner les histoires des familles originaires du Cambodge dans la mémoire nationale. »<br>
+Sun-Lay Tan, président de l’association Fragmentis Vitae Asia, a rappelé avec force la portée de cet instant : « _Chaque coup de maillet est une manière d’enraciner les histoires des familles originaires du Cambodge dans la mémoire nationale._ »<br>
 
 ## Une bénédiction pour honorer les esprits
 L'après-midi a été marquée par une cérémonie de purification et de bénédiction, en présence des vénérables des pagodes de Champs-sur-Marne, Tremblay-en-France et Bordeaux, qui se réunissent à de rares occasions. Une manière de rendre hommage aux disparus et de transmettre un message de paix et de transmission.
