--- a/content/events-actus/posts/20250202-ulule.md
+++ b/content/events-actus/posts/20250202-ulule.md
@@ -7,7 +7,7 @@ image: /images/events/Crowdfunding-fin.png
 
 ![image d'illustration](/images/events/Crowdfunding-merci.PNG)
 
-Un immense merci à vous ! Grâce à votre générosité, nous avons dépassé notre objectif de financement participatif. Au total, **23 511 euros** ont été récoltés, bien au-delà des **18 888 euros** initialement visés. Cette somme précieuse permettra d’achever l’œuvre et de couvrir les frais de son acheminement.
-Mais l'aventure ne s’arrête pas là ! Avec un budget global évalué à **70 000 euros**, chaque contribution supplémentaire nous permettra d’aller encore plus loin : édition de supports pédagogiques, organisation d’expositions et d’événements… Ensemble, faisons rayonner la mémoire !
-💛 **Vous n’avez pas encore contribué ?** Il n’est jamais trop tard ! Comme on le dit chez nous : **« Peu importe le temps, seul compte le cœur ! »**
+Un immense merci à vous ! Grâce à votre générosité, nous avons dépassé notre objectif de financement participatif. Au total, **23 511 euros** ont été récoltés, bien au-delà des **18 888 euros** initialement visés. Cette somme précieuse permettra d’achever l’œuvre et de couvrir les frais de son acheminement.<br>
+Mais l'aventure ne s’arrête pas là ! Avec un budget global évalué à **70 000 euros**, chaque contribution supplémentaire nous permettra d’aller encore plus loin : édition de supports pédagogiques, organisation d’expositions et d’événements… Ensemble, faisons rayonner la mémoire !<br><br>
+💛 **Vous n’avez pas encore contribué ?** Il n’est jamais trop tard ! Comme on le dit chez nous : **« Peu importe le temps, seul compte le cœur ! »**<br>
 📩 [Faites un don ici](https://www.helloasso.com/associations/fragmentis-vitae/formulaires/3)
